# allowlist-fw

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: main.rs
