[package]
name = "allowlist-fw"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
is_elevated = "0.1"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
embed-resource = "2.4"
